Implement maximum calculation and display
-DP maximum values change upon class and level selection

--- a/app/src/main/res/layout/activity_character_page.xml
+++ b/app/src/main/res/layout/activity_character_page.xml
@@ -103,6 +103,10 @@
 
             </TableLayout>
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
             <TableLayout
                 android:id="@+id/maxDistTable"
                 android:layout_width="wrap_content"
@@ -221,6 +225,10 @@
                 </TableRow>
 
             </TableLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <TableLayout
                 android:id="@+id/characteristicTable"
