--- a/app/src/main/res/layout/activity_character_page.xml
+++ b/app/src/main/res/layout/activity_character_page.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id = "@+id/charPageLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CharacterPageActivity">
@@ -544,4 +545,11 @@
         </LinearLayout>
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navViewSideBar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/sidebar_nav"/>
+
+</androidx.drawerlayout.widget.DrawerLayout>
