Implement New Character Alert
-Pressing new character button displays an alert for the file name
-Does not yet save
-Still transfers to the next page

--- a/app/src/main/res/menu/sidebar_nav.xml
+++ b/app/src/main/res/menu/sidebar_nav.xml
@@ -25,4 +25,12 @@
     <item
         android:id = "@+id/equipmentPageButton"
         android:title = "Equipment"/>
+
+    <item android:id = "@+id/optionsButtons">
+        <menu>
+            <item
+                android:id = "@+id/saveButton"
+                android:title = "Save"/>
+        </menu>
+    </item>
 </menu>
