--- a/app/src/main/res/menu/sidebar_nav.xml
+++ b/app/src/main/res/menu/sidebar_nav.xml
@@ -31,6 +31,9 @@
             <item
                 android:id = "@+id/saveButton"
                 android:title = "Save"/>
+            <item
+                android:id = "@+id/exitButton"
+                android:title = "Exit"/>
         </menu>
     </item>
 </menu>
