--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,16 +2,26 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id = "@+id/equipmentLayout"
+    android:id = "@+id/homePageLayout"
+    android:visibility = "visible"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Fragments.EquipmentFragment">
+    tools:context=".Activities.HomeActivity"
+    tools:visibility = "visible">
+
+    <LinearLayout
+        android:id="@+id/currentFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navViewSideBar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/sidebar_nav"/>
+        app:menu="@menu/sidebar_nav" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
