--- a/app/src/main/res/layout/fragment_character_page.xml
+++ b/app/src/main/res/layout/fragment_character_page.xml
@@ -2,10 +2,10 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id = "@+id/charPageLayout"
+    android:id = "@+id/currentFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CharacterPageActivity">
+    tools:context=".Activities.Fragments.CharacterPageFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -544,12 +544,5 @@
 
         </LinearLayout>
     </ScrollView>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navViewSideBar"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:menu="@menu/sidebar_nav"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
