--- a/app/src/main/res/layout/activity_equipment.xml
+++ b/app/src/main/res/layout/activity_equipment.xml
@@ -5,7 +5,7 @@
     android:id = "@+id/equipmentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Fragments.EquipmentFragment">
+    tools:context=".Activities.Fragments.HomeFragments.EquipmentFragment">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navViewSideBar"
