--- a/app/src/main/res/layout/fragment_character_page.xml
+++ b/app/src/main/res/layout/fragment_character_page.xml
@@ -5,7 +5,7 @@
     android:id = "@+id/currentFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Fragments.CharacterPageFragment">
+    tools:context=".Activities.Fragments.HomeFragments.CharacterPageFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -126,7 +126,7 @@
                         android:id="@+id/textView5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/dpTotalLabel"
+                        android:text="@string/totalLabel"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -280,7 +280,6 @@
                         android:background="@null"
                         android:ems="5"
                         android:inputType="number"
-                        android:text="@string/defaultScore"
                         android:textAlignment="center"
                         android:textSize="20sp" />
 
@@ -288,7 +287,6 @@
                         android:id="@+id/strMod"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/defaultMod"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -315,7 +313,6 @@
                         android:background="@null"
                         android:ems="5"
                         android:inputType="number"
-                        android:text="@string/defaultScore"
                         android:textAlignment="center"
                         android:textSize="20sp" />
 
@@ -323,7 +320,6 @@
                         android:id="@+id/dexMod"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/defaultMod"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -350,7 +346,6 @@
                         android:background="@null"
                         android:ems="5"
                         android:inputType="number"
-                        android:text="@string/defaultScore"
                         android:textAlignment="center"
                         android:textSize="20sp" />
 
@@ -358,7 +353,6 @@
                         android:id="@+id/agiMod"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/defaultMod"
                         android:textAlignment="center"
                         android:textAllCaps="true"
                         android:textSize="20sp"
@@ -386,7 +380,6 @@
                         android:background="@null"
                         android:ems="5"
                         android:inputType="number"
-                        android:text="@string/defaultScore"
                         android:textAlignment="center"
                         android:textSize="20sp" />
 
@@ -394,7 +387,6 @@
                         android:id="@+id/conMod"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/defaultMod"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -421,7 +413,6 @@
                         android:background="@null"
                         android:ems="5"
                         android:inputType="number"
-                        android:text="@string/defaultScore"
                         android:textAlignment="center"
                         android:textSize="20sp" />
 
@@ -429,7 +420,6 @@
                         android:id="@+id/intMod"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/defaultMod"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -456,7 +446,6 @@
                         android:background="@null"
                         android:ems="5"
                         android:inputType="number"
-                        android:text="@string/defaultScore"
                         android:textAlignment="center"
                         android:textSize="20sp" />
 
@@ -464,7 +453,6 @@
                         android:id="@+id/powMod"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/defaultMod"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -491,7 +479,6 @@
                         android:background="@null"
                         android:ems="5"
                         android:inputType="number"
-                        android:text="@string/defaultScore"
                         android:textAlignment="center"
                         android:textSize="20sp" />
 
@@ -499,7 +486,6 @@
                         android:id="@+id/wpMod"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/defaultMod"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -526,7 +512,6 @@
                         android:background="@null"
                         android:ems="5"
                         android:inputType="number"
-                        android:text="@string/defaultScore"
                         android:textAlignment="center"
                         android:textSize="20sp" />
 
@@ -534,7 +519,6 @@
                         android:id="@+id/perMod"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/defaultMod"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
