--- a/app/src/main/res/layout/fragment_psychic.xml
+++ b/app/src/main/res/layout/fragment_psychic.xml
@@ -5,7 +5,7 @@
     android:id = "@+id/currentFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Fragments.PsychicFragment">
+    tools:context=".Activities.Fragments.HomeFragments.PsychicFragment">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navViewSideBar"
