--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,18 @@
     </style>
     <style name="Theme.AnimaBuilder.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.AnimaBuilder.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="secondaryTableRowHead">
+        <item name="android:textSize">20dp</item>
+        <item name="android:layout_width">110dp</item>
+        <item name="android:layout_gravity">fill</item>
+    </style>
+    <style name="secondaryTableRowData">
+        <item name="android:textSize">14dp</item>
+    </style>
+    <style name="secondaryTableRowInput">
+        <item name="android:ems">5</item>
+        <item name="android:layout_height">50dp</item>
+    </style>
+
 </resources>
